--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.11.0",
